Refactoring the main module's initialization process code by adding the "declare" keyword with its '-g' option before each declared global variable

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -37,7 +37,7 @@ BU.Main.OS.IsLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2
 
 if [ "${__BU_MAIN_FS_NAME,,}" == 'apfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'APFS')" \
@@ -50,7 +50,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" == 'apfs' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'btrfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'Btrfs')" \
@@ -63,7 +63,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'btrfs' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'drvfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'drvfs')" \
@@ -76,7 +76,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'drvfs' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext2' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT2')" \
@@ -89,7 +89,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext2' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext3' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT3')" \
@@ -102,7 +102,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext3' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext4' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT4')" \
@@ -115,7 +115,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext4' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'jfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'JFS')" \
@@ -128,7 +128,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'jfs' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'xfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'XFS')" \
@@ -141,7 +141,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'xfs' ]; then
 
 elif [ "${__BU_MAIN_FS_NAME,,}" == 'zfs' ]; then
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'ZFS')" \
@@ -156,7 +156,7 @@ else
         "${BASH_SOURCE[0]}" "$(( LINENO - 2 ))" "$(BU.Main.Decho.Decho.Highlight "${__BU_MAIN_FS_NAME}")")" 'R';
 
     # File system max filename length.
-    __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
+    declare -g -i __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH}" \
