--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -175,7 +175,10 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_PATH' "${__BU_MAI
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Reset color to terminal's default text color  | Always the "$(tput sgr0)" command.
-declare -g __BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"; printf "%s" "${__BU_MAIN_COLOR_CODE_RESET}";
+declare -g \
+__BU_MAIN_COLOR_CODE_RESET;
+
+__BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"; printf "%s" "${__BU_MAIN_COLOR_CODE_RESET}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_RESET' "${__BU_MAIN_COLOR_CODE_RESET}"           'CMD' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_RESET}" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
