--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -1064,7 +1064,10 @@ else
 
     # Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
     if [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ -s "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then
-        declare -g __BU_MAIN_ROOT_DIR_PATH="$(cat "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")"; declare -i ____bu_main_modconfig_lineno="${LINENO}";  # VAR TYPE : Int   - DESC : Line number of the "${__BU_MAIN_ROOT_DIR_PATH}" global variable declaration.
+        declare -g \
+        __BU_MAIN_ROOT_DIR_PATH;
+
+        __BU_MAIN_ROOT_DIR_PATH="$(cat "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")"; declare -i ____bu_main_modconfig_lineno="${LINENO}";  # VAR TYPE : Int   - DESC : Line number of the "${__BU_MAIN_ROOT_DIR_PATH}" global variable declaration.
 
         # shellcheck disable=SC2059
         BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH' "${__BU_MAIN_ROOT_DIR_PATH}" 'Dirpath' \
