--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -40,7 +40,7 @@ function BU.Main.ModConfig.PrintReturnValue { printf "${__BU_MODULE_INIT_MSG__BU
 ## EXIT CODES LIST
 
 # Operation not permitted.
-__BU_MAIN_EXIT_NOT_PERMITTED='1';
+declare -g -i __BU_MAIN_EXIT_NOT_PERMITTED='1';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "${__BU_MAIN_EXIT_NOT_PERMITTED}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NOT_PERMITTED__VAR_DESC}")" \
@@ -48,7 +48,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "${__BU_
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # No such file or directory.
-__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND='2';
+declare -g -i __BU_MAIN_EXIT_DIR_FILE_NOT_FOUND='2';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "${__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__DIR_FILE_NOT_FOUND__VAR_DESC}")" \
@@ -56,7 +56,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "${
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Permission denied.
-__BU_MAIN_EXIT_PERMISSION_DENIED='13';
+declare -g -i __BU_MAIN_EXIT_PERMISSION_DENIED='13';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "${__BU_MAIN_EXIT_PERMISSION_DENIED}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__PERMISSION_DENIED__VAR_DESC}")" \
@@ -64,7 +64,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "${_
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # File exists.
-__BU_MAIN_EXIT_FILE_EXISTS='17';
+declare -g -i __BU_MAIN_EXIT_FILE_EXISTS='17';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "${__BU_MAIN_EXIT_FILE_EXISTS}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILE_EXISTS__VAR_DESC}")" \
@@ -72,7 +72,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "${__BU_MA
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Not a directory.
-__BU_MAIN_EXIT_NOT_DIR='20';
+declare -g -i __BU_MAIN_EXIT_NOT_DIR='20';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "${__BU_MAIN_EXIT_NOT_DIR}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NOT_DIR__VAR_DESC}")" \
@@ -80,7 +80,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "${__BU_MAIN_E
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Target is a directory.
-__BU_MAIN_EXIT_IS_DIR='21';
+declare -g -i __BU_MAIN_EXIT_IS_DIR='21';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "${__BU_MAIN_EXIT_IS_DIR}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__IS_DIR__VAR_DESC}")" \
@@ -88,7 +88,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "${__BU_MAIN_EX
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Invalid argument
-__BU_MAIN_EXIT_INVALID_ARGUMENT="22";
+declare -g -i __BU_MAIN_EXIT_INVALID_ARGUMENT="22";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "${__BU_MAIN_EXIT_INVALID_ARGUMENT}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__INVALID_ARGUMENT__VAR_DESC}")" \
@@ -96,7 +96,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "${__
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # File too large
-__BU_MAIN_EXIT_FILE_TOO_LARGE="27";
+declare -g -i __BU_MAIN_EXIT_FILE_TOO_LARGE="27";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "${__BU_MAIN_EXIT_FILE_TOO_LARGE}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILE_TOO_LARGE__VAR_DESC}")" \
@@ -104,7 +104,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "${__BU
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Not space left on the hard drive.
-__BU_MAIN_EXIT_NO_SPACE_LEFT='28';
+declare -g -i __BU_MAIN_EXIT_NO_SPACE_LEFT='28';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "${__BU_MAIN_EXIT_NO_SPACE_LEFT}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NO_SPACE_LEFT__VAR_DESC}")" \
@@ -112,7 +112,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "${__BU_
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Read-only file system.
-__BU_MAIN_EXIT_RO_FS='30';
+declare -g -i __BU_MAIN_EXIT_RO_FS='30';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "${__BU_MAIN_EXIT_RO_FS}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__RO_FS__VAR_DESC}")" \
@@ -120,7 +120,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "${__BU_MAIN_EXI
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # File name too long.
-__BU_MAIN_EXIT_FILENAME_TOO_LONG='36';
+declare -g -i __BU_MAIN_EXIT_FILENAME_TOO_LONG='36';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILENAME_TOO_LONG' "${__BU_MAIN_EXIT_FILENAME_TOO_LONG}" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILENAME_TOO_LONG_VAR_DESC}")" \
