Refactoring the main module's initialization process code by adding the "declare" keyword with its '-g' option before each declared global variable

--- a/install/.Bash-utils/config/modules/main/OS.conf
+++ b/install/.Bash-utils/config/modules/main/OS.conf
@@ -32,17 +32,17 @@
 # Operating system (please respect the case, as it will matter when calling operating-systems dependent functions)
 
 # Tip : you can copy the content of each of these variables in another variable if you need to process a function which can work in another platform.
-BU.Main.OS.IsAndroid    && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='Android';
-BU.Main.OS.IsBSD        && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='BSD';
-BU.Main.OS.IsChromeOS   && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='ChromeOS';
-BU.Main.OS.IsHaiku      && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='Haiku';
-BU.Main.OS.IsLinux      && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='Linux';
-BU.Main.OS.IsOSX        && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='OSX';
-BU.Main.OS.IsWindows    && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='Windows';
+BU.Main.OS.IsAndroid    && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='Android';
+BU.Main.OS.IsBSD        && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='BSD';
+BU.Main.OS.IsChromeOS   && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='ChromeOS';
+BU.Main.OS.IsHaiku      && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='Haiku';
+BU.Main.OS.IsLinux      && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='Linux';
+BU.Main.OS.IsOSX        && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='OSX';
+BU.Main.OS.IsWindows    && declare -g -r __BU_MAIN_OS_OPERATING_SYSTEM='Windows';
 
 # Distribution
-BU.Main.OS.IsLinuxDistroDebian && declare -r __BU_MAIN_OS_DISTRIBUTION='Debian';
-BU.Main.OS.IsLinuxDistroUbuntu && declare -r __BU_MAIN_OS_DISTRIBUTION='Ubuntu';
+BU.Main.OS.IsLinuxDistroDebian && declare -g -r __BU_MAIN_OS_DISTRIBUTION='Debian';
+BU.Main.OS.IsLinuxDistroUbuntu && declare -g -r __BU_MAIN_OS_DISTRIBUTION='Ubuntu';
 
 # Major version
 __BU_MAIN_OS_MAJOR_VERSION='';
