--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,17 +17,36 @@
 function BU.Main.ModConfig.Project.GetProjectFilePath()
 {
     #**** Variables ****
-    local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";  # VAR TYPE : String     - DESC :
-    local v_get_parent;                                 # VAR TYPE : Dirpath    - DESC :
-    local find_path;                                    # VAR TYPE : Path       - DESC :
+    local v_cut;                # VAR TYPE : String     - DESC : Cutting the './' string from the main script's path string.
+    local v_get_parent;         # VAR TYPE : CMD        - DESC : Storing the output of the "$(cd "${__BU_MAIN_PROJECT_FILE_PARENT}")" command.
+    local find_path;            # VAR TYPE : CMD        - DESC : Storing the path to the project's main script.
 
-    declare -i v_return_code;                           # VAR TYPE : Int        - DESC :
+    declare -i v_return_code;   # VAR TYPE : Int        - DESC : Return code of the "$(cd)" command passed as a command substitution into the "${v_get_parent}" variable.
 
     #**** Code ****
-    v_get_parent="$(cd "$(printf "%s" "${__BU_MAIN_PROJECT_FILE_PARENT}")" || \
-        {
-            echo >&2; "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__GetProjectFilePath__UNABLE_TO_GET_THE_PARENT_DIR}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))")" >&2; echo >&2; return 1;
-        }; pwd)";
+    v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";
+
+    v_get_parent="$(cd \
+        "$(printf \
+            "%s" \
+            "${__BU_MAIN_PROJECT_FILE_PARENT}")" || \
+            {
+                echo >&2;
+                
+                "$(printf \
+                    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__GetProjectFilePath__UNABLE_TO_GET_THE_PARENT_DIR}" \
+                    "${BASH_SOURCE[0]}" \
+                    "${FUNCNAME[0]}" \
+                    "$(( LINENO - 2 ))";\
+                )" \
+                >&2; 
+                
+                echo >&2; 
+                
+                return 1;
+            }; 
+        pwd;
+    )";
 
     find_path="$(BU.ModuleInit.FindPath "${v_get_parent}" "${v_cut}" 'f')"; v_return_code="${?}";
 
