Refactoring the main module's initialization process code by adding the "declare" keyword with its '-g' option before each declared global variable

--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -89,19 +89,32 @@ function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
 
 ## COLUMNS AND LINES
 
+declare -g __BU_MAIN_TXT_COLS;
+declare -g __BU_MAIN_TXT_LINES;
+
 # ·····················································································
 # Getting the columns number on the current text mode according to its window's length.
 
 __BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "${__BU_MAIN_TXT_COLS}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_COLS' \
+    "${__BU_MAIN_TXT_COLS}" 'CMD' \
+    "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # ···················································································
 # Getting the lines number on the current text mode according to its window's height.
 
 __BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_LINES}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_LINES' \
+    "${__BU_MAIN_TXT_LINES}" 'CMD' \
+    "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 ## ==============================================
 
@@ -113,39 +126,63 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_
 
 # Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
-__BU_MAIN_TXT_CHAR_HEADER_LINE="-";
+declare -g __BU_MAIN_TXT_CHAR_HEADER_LINE="-";
 
-# ··········································································································································································
 # Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
 
 # shellcheck disable=SC2059
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" 'Char' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_CHAR_HEADER_LINE__VAR}" "${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_CHAR_HEADER_LINE' \
+    "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" 'Char' \
+    "$(printf \
+        "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_CHAR_HEADER_LINE__VAR}" \
+        "${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET}")" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 # ···································································
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
 
-__BU_MAIN_TXT_PRINT_TAB=">>>>";
+declare -g __BU_MAIN_TXT_PRINT_TAB=">>>>";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "${__BU_MAIN_TXT_PRINT_TAB}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_PRINT_TAB__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_PRINT_TAB' \
+    "${__BU_MAIN_TXT_PRINT_TAB}" 'String' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_PRINT_TAB__VAR}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 ## ==============================================
 
 ## STORING TEXT
 
 # Storing a string got from a specific line (with a function like "BU.Main.Files.GetLineFromTextFile()", from "main/Files.lib" source file).
-__BU_MAIN_TXT_STORE_LINE="";
+declare -g __BU_MAIN_TXT_STORE_LINE="";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "${__BU_MAIN_TXT_STORE_LINE}" 'String' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_LINE__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_STORE_LINE' \
+    "${__BU_MAIN_TXT_STORE_LINE}" 'String' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_LINE__VAR}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # ·····························································································
 # Getting the messages printed with the "${__BU_MAIN_STAT_ECHO}='true'" global status variable.
 
 # Note : since this variable is an array, please leave empty the second argument of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function.
 
-__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();
+declare -a -g __BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();
 
 # shellcheck disable=SC2059
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY__ARRAY}" "${__BU_MAIN_COLOR_TXT_VAR}\${__BU_MAIN_STAT_ECHO}${__BU_MAIN_COLOR_TXT_RESET}" "${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}")" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' \
+    "" 'Array' \
+    "$(printf \
+        "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY__ARRAY}" \
+        "${__BU_MAIN_COLOR_TXT_VAR}\${__BU_MAIN_STAT_ECHO}${__BU_MAIN_COLOR_TXT_RESET}" \
+        "${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}")" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 
 ## ==============================================
 
@@ -154,9 +191,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES
 # ···································
 # Splitting a string into substrings.
 
-__BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
+declare -g __BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "${__BU_MAIN_TXT_ERR_SUBSTR_DELIM}" "String" "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_ERR_SUBSTR_DELIM__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos \
+    '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' \
+    "${__BU_MAIN_TXT_ERR_SUBSTR_DELIM}" "String" \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__BU_MAIN_TXT_ERR_SUBSTR_DELIM__VAR}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 ## ==============================================
 
@@ -175,28 +217,52 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
     #**** Variables ****
 
     # The "declare" command automatically makes the variable local.
-    declare -i __bu_main_txt_fmt_blink_lineno;
-    declare -i __bu_main_txt_fmt_blink_reset_lineno;
+    # An exception  with the '-g' option)
+    declare -i __bu_main_txt_fmt_blink_lineno;                  # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_blink_reset_lineno;            # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_bold_lineno;
-    declare -i __bu_main_txt_fmt_bold_reset_lineno;
+    declare -i __bu_main_txt_fmt_bold_lineno;                   # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_bold_reset_lineno;             # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_dim_lineno;
-    declare -i __bu_main_txt_fmt_dim_reset_lineno;
+    declare -i __bu_main_txt_fmt_dim_lineno;                    # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_dim_reset_lineno;              # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_hidden_lineno;
-    declare -i __bu_main_txt_fmt_hidden_reset_lineno;
+    declare -i __bu_main_txt_fmt_hidden_lineno;                 # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_hidden_reset_lineno;           # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_italic_lineno;
-    declare -i __bu_main_txt_fmt_italic_reset_lineno;
+    declare -i __bu_main_txt_fmt_italic_lineno;                 # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_italic_reset_lineno;           # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_reset_lineno;
+    declare -i __bu_main_txt_fmt_reset_lineno;                  # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_strikethrough_lineno;
-    declare -i __bu_main_txt_fmt_strikethrough_reset_lineno;
+    declare -i __bu_main_txt_fmt_strikethrough_lineno;          # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_strikethrough_reset_lineno;    # VAR TYPE : int    - DESC :
 
-    declare -i __bu_main_txt_fmt_underline_lineno;
-    declare -i __bu_main_txt_fmt_underline_reset_lineno;
+    declare -i __bu_main_txt_fmt_underline_lineno;              # VAR TYPE : int    - DESC :
+    declare -i __bu_main_txt_fmt_underline_reset_lineno;        # VAR TYPE : int    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_BLINK;                         # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_BLINK_RESET;                   # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_BOLD;                          # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_BOLD_RESET;                    # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_DIM;                           # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_DIM_RESET;                     # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_HIDDEN;                        # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_HIDDEN_RESET;                  # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_ITALIC;                        # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_ITALIC_RESET;                  # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_RESET;                         # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_STRIKETHROUGH;                 # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET;           # VAR TYPE : CMD    - DESC :
+
+    declare -g __BU_MAIN_TXT_FMT_UNDERLINE;                     # VAR TYPE : CMD    - DESC :
+    declare -g __BU_MAIN_TXT_FMT_UNDERLINE_RESET;               # VAR TYPE : CMD    - DESC :
 
     #**** Code ****
 
