--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -27,6 +27,13 @@
 
 #### DATE PROCESSING
 
+## DECLARATION OF THE VARIABLES WHICH STORE THE OUTPUT OF A COMMAND
+
+declare -g __BU_MAIN_TIME_DATE;
+declare -g __BU_MAIN_TIME_DATE_DISPLAY;
+
+## ==============================================
+
 ## GETTING THE DATE
 
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
