--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -26,25 +26,28 @@ function BU.Main.ModConfig.Project.GetProjectFilePath()
     #**** Code ****
     v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";
 
-    v_get_parent="$(cd \
-        "$(printf \
-            "%s" \
-            "${__BU_MAIN_PROJECT_FILE_PARENT}")" || \
-            {
-                echo >&2;
+    v_get_parent="$(\
+        cd \
+            "$(printf \
+                "%s" \
+                "${__BU_MAIN_PROJECT_FILE_PARENT}" \
+        )" || \
+        {
+            echo >&2;
+
+            "$(printf \
+                "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__GetProjectFilePath__UNABLE_TO_GET_THE_PARENT_DIR}" \
+                "${BASH_SOURCE[0]}" \
+                "${FUNCNAME[0]}" \
+                "$(( LINENO - 5 ))";\
+            )" \
+            >&2;
+
+            echo >&2;
                 
-                "$(printf \
-                    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__GetProjectFilePath__UNABLE_TO_GET_THE_PARENT_DIR}" \
-                    "${BASH_SOURCE[0]}" \
-                    "${FUNCNAME[0]}" \
-                    "$(( LINENO - 2 ))";\
-                )" \
-                >&2; 
-                
-                echo >&2; 
-                
-                return 1;
-            }; 
+            return 1;
+        };
+
         pwd;
     )";
 
@@ -221,14 +224,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_ALIAS_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_ALIAS_FILE_PATH' \
     "${__BU_MAIN_PROJECT_ALIAS_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 # -------
 
@@ -254,14 +257,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH' \
     "${__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -288,14 +291,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH' \
     "${__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_BG_RAW_CODE_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -322,14 +325,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH' \
     "${__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -356,14 +359,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH' \
     "${__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_COLOR_TEXT_RAW_CODE_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -423,7 +426,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 
 # -------
@@ -450,14 +453,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_LOG_DIR_NAME}" 'Dir' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LOG_DIR_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_LOG_DIR_PATH' \
     "${__BU_MAIN_PROJECT_LOG_DIR_PATH}" 'Dirpath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LOG_DIR_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -484,14 +487,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_LOG_FILE_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LOG_FILE_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_LOG_FILE_PATH' \
     "${__BU_MAIN_PROJECT_LOG_FILE_PATH}" 'FilePath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LOG_FILE_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 
 # -------
@@ -518,14 +521,14 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos \
     "${__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME}" 'File' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 5 ))";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos \
     '__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PATH' \
     "${__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PATH}" 'Filepath' \
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PATH}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 4 ))";
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 6 ))";
 
 ## ==============================================
 
