--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -941,57 +941,14 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
             "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
         # TEST
-        echo "RETURN CODE : ${?}";
-        echo "   FILE[${i}] :${f}";
-        echo "AUTOVAR[${i}] : ${v_varNameFull}";
-        echo;
+        # echo "RETURN CODE : ${?}";
+        # echo "   FILE[${i}] :${f}";
+        # echo "AUTOVAR[${i}] : ${v_varNameFull}";
+        # echo;
 
         # Incrementing the loop iterator.
         i="$(( i + 1 ))";
     done
-
-#     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
-#         # Obtaining the file's name after deleting its path.
-#         v_filename="$(BU.Main.Files.GetNameFromPath "${f}")";
-#
-#         # Removing the ".lib" extension.
-#         v_filenameNoExt="$(BU.Main.Files.DeleteExtension "${v_filename}" '.lib')";
-#
-#         # Uppercasing the output of the previous command in order to write it into the new global variable's name.
-#         v_filenameNoExt="${v_filenameNoExt^^}";
-#
-#         v_varNameFull="__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH";
-#
-#         __BU_MAIN_MODULE_FUNCTIONS_FILE_"${v_filenameNoExt}"_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
-#
-#         v_lineno="$(( LINENO - 2 ))";
-#
-#
-#         BU.ModuleInit.DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH" \
-#             "${!v_varNameFull}" 'Filepath' \
-#             "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize "${v_filename}")" \
-#             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-#             "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-#     done
-
-
-    #******************* OLD CODE *******************
-
-    #~ ~~~~~~~~~~~~~~~
-    #~ "Args.lib" file
-    #~ ~~~~~~~~~~~~~~~
-
-#     v_lineno="$(( LINENO + 2 ))";
-#
-#     __BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH="$(BU.ModuleInit.FindPath "" "Args.lib" 'f')" || {
-#
-#     }
-#
-#     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH' \
-#         "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH}" 'Filepath' \
-#         "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Args.lib')" \
-#         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-#         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
     return 0;
 }
