Adding new Slackware functions

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -604,6 +604,12 @@ alias BU.IsFileExecutableOnly='BU.Main.Files.IsExecutableOnly';
 alias BU.GetByteSize='BU.Main.Files.GetByteSize';
 alias BU.GetCreationDate='BU.Main.Files.GetCreationDate';
 alias BU.GetCharactersNumber='BU.Main.Files.GetCharactersNumber';
+alias BU.GetChecksumMD5='BU.Main.Files.GetChecksum.MD5';
+alias BU.GetChecksumSHA1='BU.Main.Files.GetChecksum.SHA1';
+alias BU.GetChecksumSHA224='BU.Main.Files.GetChecksum.224';
+alias BU.GetChecksumSHA256='BU.Main.Files.GetChecksum.256';
+alias BU.GetChecksumSHA384='BU.Main.Files.GetChecksum.384';
+alias BU.GetChecksumSHA512='BU.Main.Files.GetChecksum.512';
 alias BU.GetExtension='BU.Main.Files.GetExtension';
 alias BU.GetLastAccess='BU.Main.Files.GetLastAccess';
 alias BU.GetLastModification='BU.Main.Files.GetLastModification';
@@ -2642,6 +2648,11 @@ alias BU.IsOSLinuxDistroLinuxMint21_1='BU.Main.OS.IsLinuxDistroLinuxMint21_1';
 
 alias BU.IsOSLinuxDistroManjaro='BU.Main.OS.IsLinuxDistroManjaro';
 
+
+# --------------------
+
+# Checking if current Linux distribution is Slackware.
+alias BU.IsOSLinuxDistroSlackware='BU.Main.OS.IsLinuxDistroSlackware';
 
 # --------------------
 
