Unspaghettification of the framework's code

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -136,7 +136,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_VIOLET'      "${_
 
 ## ==============================================
 
-## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "BU.Main.TextFormat.SetTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
+## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "BU.Main.TextFormat.SetTextColor()" FUNCTIONS, THEN ENCODED WITH THE "$(tput)" COMMAND
 
 # Commands text display color           | Default color : gray
 declare -g __BU_MAIN_COLOR_CODE_CMD="${__BU_MAIN_COLOR_CODE_GRAY}";
